fixed csss as props collapse

--- a/src/styles/sass/about.scss
+++ b/src/styles/sass/about.scss
@@ -18,6 +18,7 @@
   min-width: 100%;
   .about {
     margin: 0.5em;
+    border: 3px solid ;
   }
   .about-collapse-wrapper {
     display: flex;
@@ -31,8 +32,9 @@
     @include mobile {
       margin-top: 0;
     }
-    .about {
+    .about-collapse {
       width: 80%;
+      margin: 0.5em 0 0.5em 0;
       @include mobile {
         width: 90%;
       }
