--- a/src/styles/sass/collapse.scss
+++ b/src/styles/sass/collapse.scss
@@ -11,11 +11,6 @@
 .collapse {
   border-radius: 10px;
   background-color: #f7f7f7;
-  @include mobile {
-    width: 100%;
-  }
-}
-.collapse_description , .collapse_equipement{
   width: 45%;
   @include mobile {
     width: 100%;
@@ -23,7 +18,7 @@
   }
 }
 
-.content {
+.collapse-content {
   border-radius: 10px;
   min-height: 10em;
   display: flex;
